--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@
 /SnortAngular/out-tsc
 
 # dependencies
-/node_modules
-/SnortAngular/node_modules
-/SnortServer/node_modules
+node_modules/
 
 # IDEs and editors
 /.idea
