--- a/SnortAngular/package.json
+++ b/SnortAngular/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.4.2",
+    "ng2-file-upload": "^1.2.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
