--- a/SnortServer/package.json
+++ b/SnortServer/package.json
@@ -5,13 +5,15 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "author": "Trifu Alexandru",
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.0.1",
     "express": "^4.15.2",
+    "fs": "0.0.1-security",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0"
   }
 }
