--- a/SnortAngular/package.json
+++ b/SnortAngular/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/file-saver": "0.0.1",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "ng2-bootstrap": "^1.4.2",
     "ng2-file-upload": "^1.2.1",
     "rxjs": "^5.1.0",
