--- a/SnortServer/package.json
+++ b/SnortServer/package.json
@@ -19,6 +19,7 @@
     "fs": "0.0.1-security",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
-    "nodecsv": "^1.1.0"
+    "nodecsv": "^1.1.0",
+    "write": "^0.3.3"
   }
 }
